--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-pyTelegramBotAPI==4.15.4
-python-dotenv==1.0.1
-playwright==1.42.0
+python-telegram-bot==21.6
+playwright==1.46.0
+greenlet==3.0.3
+python-dotenv
+
